--- a/gss2018.rmd
+++ b/gss2018.rmd
@@ -1,7 +1,7 @@
 ---
 title: "General Social Survey"
-author: "Your Name"
-date: "Year 2020"
+author: "Jayde Jaramillo"
+date: "Year 2023"
 output: 
   html_document:
     number_sections: true
@@ -26,10 +26,17 @@ source("GrabData.R")
 The data in the dataframe GSSdata is from the 2018 General Social Survey. The first blocks of R-code has selected down a subset of the data to just 16 variables. It has further removed unwanted factor levels in much of the data. Examine the code in the GrabData.R file to see what it is doing. Some of the variables are categorical and others are numerical. Be sure to do a variable analysis before tackling each question.  
 First question - Is opinion on the death penalty (CAPPUN) independent of gun ownership (OWNGUN)?
 
+$H_0$L there is no relationship between gun ownership and opinion on the death penalty 
+
+$H_A$ there is relationship between gun ownership and opinion about the death penalty
+
 
 ## Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
+
+both variables are categorical, so we use the Cat~cat helper file 
+
 
 ##Results
 
